# Digit_Control

./: CMakeCache.txt  CMakeLists.txt  MUJOCO_LOG.TXT  Makefile  README.md  cmake_install.cmake  lowlevelapi_example  lowlevelapi_example (copy).cpp  lowlevelapi_example.cpp  main.cpp  standing_control (copy).cpp  standing_control.cpp  standing_controlV2.cpp
examples/: lowlevelapi_example.toml  lowlevelapi_example_box.toml
include/: Digit_safety.hpp  OSC_Control.hpp  kin_left_arm.hpp
include/AnalyticalKinematicsDynamics/: Makefile  analytical_expressions.hpp  cmake_install.cmake
include/GeometricKinematics/: Makefile  cmake_install.cmake
include/MathExpr/: math2mat.hpp
src/: Digit_safety.cpp  OSC_Control.cpp  kin_left_arm.cpp  kin_right_arm.cpp
src/config_file/: osc_robot_config.toml
